data/all-infer-tutorial/buffer-overflow1/infer-out/report.txt
#0
tutorial/buffer-overflow1.c:12: error: Api Misuse
  BufferOverflow.
  10.   ptr_h = getenv("HOME");
  11.   if (ptr_h != NULL) {
  12.     sprintf(h, "Your home directory is: %s !", ptr_h);
          ^
  13.     printf("%s\n", h);
  14.   }

Found 1 issue
  Issue Type(ISSUED_TYPE_ID): #
      Api Misuse(API_MISUSE): 1
